Actions
Bug #15952
closedIssue with Array#unshift, sometimes doesn't respect frozenness of array
Bug #15952:
Issue with Array#unshift, sometimes doesn't respect frozenness of array
Updated by luke-gru (Luke Gruber) about 7 years ago
Updated by luke-gru (Luke Gruber) about 7 years ago
- Status changed from Open to Closed
Applied in changeset git|ec8e5f5aa64e2a54cf1e303f2b012c98e8d521ba.
array.c: always check frozenness in Array#unshift. Fixes [Bug #15952]
Updated by nagachika (Tomoyuki Chikanaga) about 7 years ago
- Backport changed from 2.4: UNKNOWN, 2.5: UNKNOWN, 2.6: UNKNOWN to 2.4: UNKNOWN, 2.5: REQUIRED, 2.6: REQUIRED
Updated by nagachika (Tomoyuki Chikanaga) about 7 years ago
- Backport changed from 2.4: UNKNOWN, 2.5: REQUIRED, 2.6: REQUIRED to 2.4: UNKNOWN, 2.5: REQUIRED, 2.6: DONE
ruby_2_6 r67740 merged revision(s) ec8e5f5aa64e2a54cf1e303f2b012c98e8d521ba,5a187e26adc8aa32367f294c1496935c7356d386.
Updated by usa (Usaku NAKAMURA) about 7 years ago
- Backport changed from 2.4: UNKNOWN, 2.5: REQUIRED, 2.6: DONE to 2.4: UNKNOWN, 2.5: DONE, 2.6: DONE
ruby_2_5 r67771 merged revision(s) ec8e5f5aa64e2a54cf1e303f2b012c98e8d521ba,5a187e26adc8aa32367f294c1496935c7356d386.
Actions