array.c: always check frozenness in Array#unshift. Fixes [Bug #15952]

Closes: https://github.com/ruby/ruby/pull/2251